--- a/src/components/Header/Navbar.css
+++ b/src/components/Header/Navbar.css
@@ -16,7 +16,7 @@
 .nav-link {
   text-decoration: none !important;
   text-transform: uppercase !important;
-  color: #045B50 !important;
+  /* color: #045B50 !important; */
 
 }
 
@@ -36,8 +36,10 @@
 .mobile-menu.visible {
   display: flex;
   flex-direction: column; 
-  gap: 8px; 
+  gap: 18px; 
   margin-top: 40px;
+  align-items: center;
+  padding-bottom: 5px;
 }
 
 .mobile-menu .MuiListItem-root {
