--- a/src/Pages/Donate/Donate.css
+++ b/src/Pages/Donate/Donate.css
@@ -1,11 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap');
 
 .customSubtitle1 {
-    font-family: Raleway;
-    font-size: 18px;
+    font-family: 'Raleway';
+    font-size: 18px !important;
     font-style: normal;
-    font-weight: 700;
+    font-weight: 700 !important;
     line-height: 170%;
-    color: "#4A4A4A"
-  }
-
-
+    color: #4A4A4A;
+    
+}
