--- a/src/Pages/OurApproach/OurApproach.css
+++ b/src/Pages/OurApproach/OurApproach.css
@@ -1,11 +1,15 @@
-.spacing{
-    margin-bottom: 16px;
-    margin-top:32px ;
-}
 
-.spacing1{
-    margin-bottom: 16px;
-}
-.spacing2{
-    margin-bottom: 32px;
+.stepNumber {
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: white;
+    margin-top: 20px;
+    border: 7px solid white;
+    border-radius: 100px;
+    width: 60px;
+    height: 60px;
+    background: rgba(92, 120, 90, 1);
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
