--- a/src/Pages/Home/Styles.css
+++ b/src/Pages/Home/Styles.css
@@ -56,54 +56,10 @@ h5 {
 
 .dashboardBox {
   border-radius: 16px;
-
   box-shadow: 0px 1px 2px 0px rgba(74, 74, 74, 0.06), 0px 2px 1px 0px rgba(74, 74, 74, 0.04), 0px 1px 5px 0px rgba(74, 74, 74, 0.08);
 }
 
 /* 
-.circle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 560.84px;
-  height: 560.84px;
-  background-color: rgba(92, 120, 90, 1);
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  filter: blur(10.292168617248535px);
-
-} */
-/* 
-.circle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 560.84px;
-  height: 560.84px;
-  background-color: rgba(92, 120, 90, 1);
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.circle::before {
-  content: '';
-  position: absolute;
-  top: -2px;
-  left: -2px;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  border: 20px solid transparent;
-  filter: blur(10px);
-  pointer-events: none;
-} */
-
 .circle {
   position: absolute;
   top: 50%;
@@ -129,7 +85,7 @@ h5 {
   box-shadow: 0 0 15px 15px var(--Primary--light, #F0F4EF);
   pointer-events: none;
 }
-.circle-text {
+.circle-text{
   color: var(--white, #FFF);
   text-align: center;
   font-family: Montserrat;
@@ -139,5 +95,109 @@ h5 {
   line-height: 162%;
   text-align: center;
   padding: 80px;
+}  */
 
+
+.circle {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 560.84px;
+  height: 560.84px;
+  background-color: rgba(92, 120, 90, 1);
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  /* Ensure content does not overflow */
+}
+
+.circle::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  box-shadow: 0 0 15px 15px var(--Primary--light, #F0F4EF);
+  pointer-events: none;
+}
+
+.circle-text {
+  color: var(--white, #FFF);
+  text-align: center;
+  font-family: Montserrat, sans-serif;
+  font-size: 30px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 162%;
+  padding: 80px;
+  box-sizing: border-box;
+  max-width: 90%;
+}
+
+@media (max-width: 1200px) {
+  .circle {
+    width: 400px;
+    height: 400px;
+  }
+
+  .circle-text {
+    font-size: 24px;
+    padding: 60px;
+  }
+}
+
+@media (max-width: 992px) {
+  .circle {
+    width: 300px;
+    height: 300px;
+  }
+
+  .circle-text {
+    font-size: 20px;
+    padding: 40px;
+  }
+}
+
+@media (max-width: 768px) {
+  .circle {
+    width: 250px;
+    height: 250px;
+  }
+
+  .circle-text {
+    font-size: 13px;
+    padding: 30px;
+    max-width: 85%;
+  }
+}
+
+@media (max-width: 576px) {
+  .circle {
+    width: 200px;
+    height: 200px;
+  }
+
+  .circle-text {
+    font-size: 6px;
+    padding: 40px;
+    max-width: 80%;
+  }
+}
+
+@media (max-width: 400px) {
+  .circle {
+    width: 150px;
+    height: 150px;
+  }
+
+  .circle-text {
+    font-size: 9px;
+    padding: 10px;
+    max-width: 75%;
+  }
 }
