--- a/src/Pages/Home/Styles.css
+++ b/src/Pages/Home/Styles.css
@@ -50,16 +50,9 @@ h5 {
 
   to {
     transform: translateX(-100%);
-    /* Move left by half the container's width */
   }
 }
 
-.dashboardBox {
-  border-radius: 16px;
-  box-shadow: 0px 1px 2px 0px rgba(74, 74, 74, 0.06), 0px 2px 1px 0px rgba(74, 74, 74, 0.04), 0px 1px 5px 0px rgba(74, 74, 74, 0.08);
-}
-
-/* 
 .circle {
   position: absolute;
   top: 50%;
@@ -72,58 +65,10 @@ h5 {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-.circle::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  box-shadow: 0 0 15px 15px var(--Primary--light, #F0F4EF);
-  pointer-events: none;
-}
-.circle-text{
-  color: var(--white, #FFF);
-  text-align: center;
-  font-family: Montserrat;
-  font-size: 30px;
-  font-style: normal;
-  font-weight: 700;
-  line-height: 162%;
-  text-align: center;
-  padding: 80px;
-}  */
+  box-shadow: 0 0 10px 10px rgba(240, 244, 239, 0.8);
+} 
 
 
-.circle {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 560.84px;
-  height: 560.84px;
-  background-color: rgba(92, 120, 90, 1);
-  border-radius: 50%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  overflow: hidden;
-}
-
-.circle::before {
-  content: '';
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border-radius: 50%;
-  box-shadow: 0 0 15px 15px var(--Primary--light, #F0F4EF);
-  pointer-events: none;
-}
 
 .circle-text {
   color: var(--white, #FFF);
@@ -142,6 +87,7 @@ h5 {
   .circle {
     width: 400px;
     height: 400px;
+    box-shadow: 0 0 30px 15px rgba(240, 244, 239, 0.8);
   }
 
   .circle-text {
@@ -154,6 +100,7 @@ h5 {
   .circle {
     width: 300px;
     height: 300px;
+    box-shadow: 0 0 30px 15px rgba(240, 244, 239, 0.8);
   }
 
   .circle-text {
@@ -173,6 +120,7 @@ h5 {
   .circle {
     width: 250px;
     height: 250px;
+    box-shadow: 0 0 30px 15px rgba(240, 244, 239, 0.8);
   }
 
   .circle-text {
@@ -193,6 +141,7 @@ h5 {
   .circle {
     width: 500px;
     height: 500px;
+    box-shadow: 0 0 30px 15px rgba(240, 244, 239, 0.8);
   }
 
   .circle-text {
@@ -212,7 +161,7 @@ h5 {
   .circle {
     width: 300px;
     height: 300px;
-
+    box-shadow: 0 0 30px 15px rgba(240, 244, 239, 0.8);
   }
 
   .circle-text {
@@ -232,6 +181,7 @@ h5 {
   .circle {
     width: 150px;
     height: 150px;
+    box-shadow: 0 0 30px 15px rgba(240, 244, 239, 0.8);
   }
 
   .circle-text {
