BGIMG change in home page

--- a/src/Pages/Home/Styles.css
+++ b/src/Pages/Home/Styles.css
@@ -51,7 +51,7 @@ h5 {
     transform: translateX(-100%);
   }
 }
-
+/* 
 .circle {
   position: absolute;
   top: 50%;
@@ -65,4 +65,4 @@ h5 {
   align-items: center;
   justify-content: center;
   box-shadow: 0 0 30px 30px rgba(240, 244, 239, 0.8);
-}
+} */
