--- a/src/Pages/OurApproach/TimeLine/style.css
+++ b/src/Pages/OurApproach/TimeLine/style.css
@@ -1,240 +1,3 @@
-#conference-timeline {
-  position: relative;
-  max-width: 920px;
-  width: 100%;
-  margin: 0 auto;
-}
-
-#conference-timeline .timeline-start,
-#conference-timeline .timeline-end {
-  display: table;
-  background: rgba(206, 215, 206, 1);
-  color: rgba(92, 120, 90, 1);
-  text-align: center;
-  margin: 0 auto;
-  width: Hug (453px)px;
-  height: Hug (63px)px;
-  top: 2212px;
-  left: 494px;
-  padding: 16px 32px 16px 32px;
-  gap: 10px;
-  border-radius: 32px 32px 32px 32px;
-  opacity: 0px;
-  font-family: Montserrat;
-  font-size: 24px;
-  font-weight: 700;
-  line-height: 31.2px;
-  text-align: center;
-
-
-}
-
-#conference-timeline .conference-center-line {
-  position: absolute;
-  width: 16px;
-  height: 100%;
-  top: 0;
-  left: 50%;
-  margin-left: -2px;
-  background: rgba(224, 224, 224, 1);
-  z-index: -1;
-}
-
-#conference-timeline .conference-timeline-content {
-  padding-top: 67px;
-  padding-bottom: 67px;
-}
-
-.timeline-article {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  overflow: hidden;
-  margin: 20px 0;
-}
-
-.timeline-article .content-left-container,
-.timeline-article .content-right-container {
-  max-width: 44%;
-  width: 100%;
-}
-
-.timeline-article .timeline-author {
-  display: block;
-  font-weight: 400;
-  font-size: 14px;
-  line-height: 24px;
-  color: #242424;
-  text-align: right;
-}
-
-.timeline-article .content-left,
-.timeline-article .content-right {
-  position: relative;
-  width: auto;
-  border: 1px solid #ddd;
-  background-color: #fff;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, .03);
-  padding: 27px 25px;
-}
-
-.timeline-article p {
-  margin: 0 0 0 60px;
-  padding: 0;
-  font-weight: 400;
-  color: #242424;
-  font-size: 14px;
-  line-height: 24px;
-  position: relative;
-}
-
-.timeline-article p span.article-number {
-  position: absolute;
-  font-size: 44px;
-  top: 10px;
-  left: -60px;
-  color: rgba(92, 120, 90, 1);
-}
-
-.timeline-article .content-left-container {
-  float: left;
-}
-
-.timeline-article .content-right-container {
-  float: right;
-}
-
-.timeline-article .content-left:before,
-.timeline-article .content-right:before {
-  position: absolute;
-  top: 20px;
-  font-size: 23px;
-  font-family: "FontAwesome";
-  color: #fff;
-}
-
-.timeline-article .content-left:before {
-  content: "\f0da";
-  right: -8px;
-}
-
-.timeline-article .content-right:before {
-  content: "\f0d9";
-  left: -8px;
-}
-
-.timeline-article .meta-date {
-  position: relative;
-  top: 0;
-  left: 52%;
-  width: 22px;
-  height: 22px;
-  margin-left: -31px;
-  color: #fff;
-  top:50px;
-  border-radius: 100%;
-  background: rgba(92, 120, 90, 1);
-  border: 11px solid rgba(200, 208, 199, 1);
-}
-
-.timeline-article .meta-date .date,
-.timeline-article .meta-date .month {
-  display: block;
-  text-align: center;
-  font-weight: 900;
-}
-
-.timeline-article .meta-date .date {
-  font-size: 30px;
-  line-height: 40px;
-}
-
-.timeline-article .meta-date .month {
-  font-size: 18px;
-  line-height: 10px;
-}
-@media only screen and (max-width: 830px) {
-
-  #conference-timeline .timeline-start,
-  #conference-timeline .timeline-end {
-    margin: 0;
-  }
-
-  #conference-timeline .conference-center-line {
-    margin-left: 0;
-    left: 50px;
-  }
-
-  .timeline-article .meta-date {
-    margin-left: 0;
-    left: 20px;
-  }
-
-  .timeline-article .content-left-container,
-  .timeline-article .content-right-container {
-    max-width: 100%;
-    width: auto;
-    float: none;
-    margin-left: 110px;
-    min-height: 53px;
-  }
-
-  .timeline-article .content-left-container {
-    margin-bottom: 20px;
-  }
-
-  .timeline-article .content-left,
-  .timeline-article .content-right {
-    padding: 10px 25px;
-    min-height: 65px;
-  }
-
-  .timeline-article .content-left:before {
-    content: "\f0d9";
-    right: auto;
-    left: -8px;
-  }
-
-  .timeline-article .content-right:before {
-    display: none;
-  }
-}
-
-@media only screen and (max-width: 400px) {
-  .timeline-article p {
-    margin: 0;
-  }
-
-  .timeline-article p span.article-number {
-    display: none;
-  }
-
-}
-.timeline-article:nth-child(odd) .content-left-container {
-  float: left;
-}
-
-.timeline-article:nth-child(odd) .content-right-container {
-  display: none;
-}
-
-.timeline-article:nth-child(even) .content-left-container {
-  display: none;
-}
-
-.timeline-article:nth-child(even) .content-right-container {
-  float: right;
-}
-
-#conference-timeline .timeline-point {
-  display: table;
-  background: rgba(92, 120, 90, 1);
-  padding: 12px 12px;
-  color: #fff;
-  width: 2px;
-  height: 2px;
-  text-align: center;
-  margin: 0 auto;
-  border-radius: 50%;
-  border: 11px solid rgba(206, 215, 206, 1);
+body{
+    background-color: #F8F3F0;
 }
