--- a/src/Pages/OurApproach/TimeLine/Mobile/style.css
+++ b/src/Pages/OurApproach/TimeLine/Mobile/style.css
@@ -1,4 +1,4 @@
-
+/* 
 
 .Timeline {
     display: flex;
@@ -42,4 +42,47 @@
     line-height: 1.5;
     padding: 5px 0;
     margin-left: 5px;
-  }
+  } */
+
+
+
+.Timeline {
+  background: var(--primary-color);
+  margin: 20px auto;
+  padding: 20px;
+}
+
+.Outer {
+  border-left: 10px solid rgba(224, 224, 224, 1);
+}
+
+.Card {
+  position: relative;
+  margin: 0 0 20px 20px;
+  padding: 10px;
+  color: gray;
+  border-radius: 8px;
+  max-width: 400px;
+}
+
+.Info {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.Title {
+  color:"rgba(92, 120, 90, 1)";
+  position: relative;
+}
+
+.Title::before {
+  content: "";
+  position: absolute;
+  width: 22px;
+  height: 22px;
+  background:rgba(92, 120, 90, 1);
+  border-radius: 999px;
+  left: -56px;
+  border: 10px solid rgba(224, 224, 224, 1);
+}
