work on laptoplabelling

--- a/src/Pages/Donate/Donate.css
+++ b/src/Pages/Donate/Donate.css
@@ -9,3 +9,4 @@
     color: #4A4A4A;
     
 }
+/* https://script.google.com/macros/s/AKfycbxhAzy1NaeaXthajGbyQnJHPwuFrANtPQQvkAAhu1lKseZEPXSKVQPBLjh8gDGUjg1l/exec */
