--- a/src/CorporateDB/LocationImpact/LocationWiseImpact.css
+++ b/src/CorporateDB/LocationImpact/LocationWiseImpact.css
@@ -1,23 +1,22 @@
 .hover-dialog {
   position: absolute;
-  top: 55%;  
-  left:69%;
   width: 380px;  
   height: 290px;   
-  background-color: rgba(255, 255, 255, 0.8); 
   padding: 24px;
   border-radius: 8px;
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   z-index: 1000;
   display: flex;
   flex-direction: column;
+  opacity: 1;
   gap: 16px;
+  background-color: #FFFFFF;
+  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.16);
 }
 
 .dialog-header {
   display: flex;
   align-items: center;
-  gap: 10px;
+  gap: 0px;
 }
 
 .state-icon {
