Updated it with original data.

--- a/src/CorporateDB/YearlyImpact/styles/YearlyImpect.css
+++ b/src/CorporateDB/YearlyImpact/styles/YearlyImpect.css
@@ -22,7 +22,7 @@
 }
 
 .yearly-impact-card {
-    cursor: pointer;
+    /* cursor: pointer; */
     border-radius: 0.5rem;
     border: 1px solid #E0E0E0;
     background: #FFF;
