--- a/src/CorporateDB/MonthlyImpact/styles/MonthlyImpact.css
+++ b/src/CorporateDB/MonthlyImpact/styles/MonthlyImpact.css
@@ -40,3 +40,13 @@
 .monthly-impact-subtitle {
   color: #828282;
 }
+.MuiIconButton-root {
+  width: 40px;
+  height: 40px;
+  transition: none; /* Prevent size transitions */
+}
+.MuiIconButton-root:hover {
+  width: 40px;
+  height: 40px;
+  padding: 8px; /* Ensure consistent padding */
+}
